------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Thu Jan 13 18:30 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fix to bug which meant last possible inode could not be
	  accessed.

Wed Jan 12 18:43 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed problem with inodes not released.

Wed Jan 12 18:27 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Important fix to SIBO keyboard driver by Simon Wood.

Mon Jan 10 17:07 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Final changes before 0.0.82.

Thu Jan 06 14:36 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Merged code by Simon Wood to make ELKS work on the Psion
	  SIxteen Bit Organiser (SIBO) architecture.

Wed Jan 05 17:23 GMT 2000   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed typo bug in free_irq() by Vladimir Shamaev.

Fri Dec 17 16:37 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Modified console selection to make more sense.

Wed Dec 15 19:41 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Re-wrote a number of filesystem functions to make them smaller,
	  and faster.

Mon Nov 22 13:11 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Grammar correction of config files by Giles Russell.

Wed Nov 17 12:12 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* English version of ROM image builder mkurlader.c

Mon Nov 15 08:38 GMT 1999   Simon Weijgers  <simon@weijgers.com>

	* Patch from David Murn <scuffer@hups.apana.org.au>:
	  Allows you to pass parameters to IRQ handlers.

Wed Nov 10 16:04 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Merge in code to boot kernel from rom, contributed by
	  Christian Mardmuller (chm@kdt.de).

Wed Nov 10 14:51 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
